Thu Jan  3 05:51:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/autobuild.build:
        * integration/include/svn.build:
        
          Reintegrated SVN update into the autobuild since I was
          having a LOT of trouble getting CC to recognize 
          modifications.

Thu Jan  3 05:33:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/svn.build:
        * integration/include/svn.build.old:

          Forcing another dummy revision by renaming a file.

Thu Jan  3 05:23:54 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/svn.build.old:

          Renamed the file below to force an update.

        * integration/include/svn.build:

          Removed this file.

Thu Jan  3 03:35:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/devenv.build:

          'failonerror' attribute was misspelled.

Thu Jan  3 03:30:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/devenv.build:
        * integration/include/mpc.build:

          - Removed duplicate project names.
          - Replaced the 'value' attribute of the <arg> tag with the
            'line' attribute.

Thu Jan  3 03:24:39 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/autobuild.build:

          Removed explicit dependency on SVN updates since it's
          support in CruiseControl.

Thu Jan  3 01:36:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/mwc.build:

          Removed this file.

Thu Jan  3 01:33:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/autobuild.build:
        * integration/include:
        * integration/include/devenv.build:
        * integration/include/mpc.build:
        * integration/include/mwc.build:
        * integration/include/svn.build:

          Extracted common build task into reusable scripts based