@@ -1,10 +1,16 @@
+Thu Jan  3 06:14:03 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/Activation_Record.h:
+        
+          Updated the Doxygen documentation.
+
 Thu Jan  3 05:51:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * integration/autobuild.build:
         * integration/include/svn.build:
-        
+
           Reintegrated SVN update into the autobuild since I was
-          having a LOT of trouble getting CC to recognize 
+          having a LOT of trouble getting CC to recognize
           modifications.
 
 Thu Jan  3 05:33:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
